<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/phone_icon"
        android:layout_weight="20"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:letterSpacing="0.08"
        android:textSize="25sp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="5">

        <EditText
            android:id="@id/settings_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_rounded"
            android:elevation="5dp"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="20">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="@string/submit"
            android:id="@+id/settings_button"/>
    </LinearLayout>
</LinearLayout>